unpackaged/main/default/objects/Rate_Card_Trade__c/Rate_Card_Trade__c.object-meta.xml
<CustomObject>
    <label>Trade Rate Card</label>
    <nameField>
        <displayFormat>TRC-{0000}</displayFormat>
        <label>Trade Rate Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>