unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Charge_R1__c.field-meta.xml
<CustomField>
    <fullName>Charge_R1__c</fullName>
    <label>Charge R1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>