unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Charge_R2__c.field-meta.xml
<CustomField>
    <fullName>Charge_R2__c</fullName>
    <label>Charge R2</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>