unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Charge_R3__c.field-meta.xml
<CustomField>
    <fullName>Charge_R3__c</fullName>
    <label>Charge R3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>