unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Default_For_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Default_For_Estimate__c</fullName>
    <label>Default For Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engineer_Tier_Type</valueSetName>
    </valueSet>
</CustomField>