unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Lead_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fee__c</fullName>
    <label>Lead Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>