unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Op_Share_Tier_6_R2__c.field-meta.xml
<CustomField>
    <fullName>Op_Share_Tier_6_R2__c</fullName>
    <formula>Charge_R2__c*Pay_Tier_6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Op Share Tier 6 (R2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>