unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Pay_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>Pay_Tier_1__c</fullName>
    <label>Pay Tier 1</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>