unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <label>Rate Card</label>
    <referenceTo>Rate_Card_Account__c</referenceTo>
    <relationshipLabel>Trade Rate Cards</relationshipLabel>
    <relationshipName>Trade_Rate_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>