unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trade</label>
    <referenceTo>Trade__c</referenceTo>
    <relationshipLabel>Trade Rate Cards</relationshipLabel>
    <relationshipName>Trade_Rate_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>