unpackaged/main/default/objects/Rate_Card_Trade__c/fields/Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name__c</fullName>
    <formula>Trade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Name</label>
    <type>Text</type>
</CustomField>