unpackaged/main/default/objects/Rate_Card_Trade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trade__c</columns>
    <columns>Charge_R1__c</columns>
    <columns>Charge_R2__c</columns>
    <columns>Charge_R3__c</columns>
    <columns>Pay_Tier_2__c</columns>
    <columns>Pay_Tier_4__c</columns>
    <columns>Pay_Tier_6__c</columns>
    <columns>Pay_Tier_8__c</columns>
    <columns>Pay_Tier_10__c</columns>
    <columns>Default_For_Estimate__c</columns>
    <columns>Lead_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>